--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "dbd.js": "^2.0.0"
+      "dbd.js": "^2.2.6",
+      "workerpool": "6.1.0"
     }
   }
