--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "dbd.js": "^3.0.5",
+      "aoi.js": "^3.0.0",
       "workerpool": "6.1.2"
     }
   }
